--- a/q-manifest.json
+++ b/q-manifest.json
@@ -10,15 +10,15 @@
       "captures": true,
       "parent": "s_WehTHV2Vp3k"
     },
-    "s_hA9UPaY8sNQ": {
+    "s_kzjavhDI3L0": {
       "origin": "../node_modules/@builder.io/qwik-city/index.qwik.mjs",
       "displayName": "Link_component_a_onClick",
-      "canonicalFilename": "s_ha9upay8snq",
-      "hash": "hA9UPaY8sNQ",
+      "canonicalFilename": "s_kzjavhdi3l0",
+      "hash": "kzjavhDI3L0",
       "ctxKind": "event",
       "ctxName": "onClick$",
       "captures": true,
-      "parent": "s_mYsiJcA4IBc"
+      "parent": "s_8gdLBszqbaM"
     },
     "s_tY5igJzCM5Q": {
       "origin": "routes/index.tsx",
@@ -40,15 +40,15 @@
       "captures": true,
       "parent": "s_zr0sXMkduGs"
     },
-    "s_skxgNVWVOT8": {
+    "s_yiXwCC0m3jY": {
       "origin": "../node_modules/@builder.io/qwik-city/index.qwik.mjs",
       "displayName": "Link_component_a_onMouseOver",
-      "canonicalFilename": "s_skxgnvwvot8",
-      "hash": "skxgNVWVOT8",
+      "canonicalFilename": "s_yixwcc0m3jy",
+      "hash": "yiXwCC0m3jY",
       "ctxKind": "event",
       "ctxName": "onMouseOver$",
       "captures": false,
-      "parent": "s_mYsiJcA4IBc"
+      "parent": "s_8gdLBszqbaM"
     },
     "s_asLbBTFH6kA": {
       "origin": "routes/index.tsx",
@@ -70,25 +70,25 @@
       "captures": true,
       "parent": "s_WehTHV2Vp3k"
     },
-    "s_uVE5iM9H73c": {
+    "s_EpaZ5qQ4Lg4": {
       "origin": "../node_modules/@builder.io/qwik-city/index.qwik.mjs",
       "displayName": "Link_component_a_onQVisible",
-      "canonicalFilename": "s_uve5im9h73c",
-      "hash": "uVE5iM9H73c",
+      "canonicalFilename": "s_epaz5qq4lg4",
+      "hash": "EpaZ5qQ4Lg4",
       "ctxKind": "event",
       "ctxName": "onQVisible$",
       "captures": false,
-      "parent": "s_mYsiJcA4IBc"
+      "parent": "s_8gdLBszqbaM"
     },
-    "s_AaAlzKH0KlQ": {
+    "s_2Eo7WCpaqI8": {
       "origin": "../node_modules/@builder.io/qwik-city/index.qwik.mjs",
-      "displayName": "QwikCity_component_useWatch",
-      "canonicalFilename": "s_aaalzkh0klq",
-      "hash": "AaAlzKH0KlQ",
+      "displayName": "QwikCityProvider_component_useWatch",
+      "canonicalFilename": "s_2eo7wcpaqi8",
+      "hash": "2Eo7WCpaqI8",
       "ctxKind": "function",
       "ctxName": "useWatch$",
       "captures": true,
-      "parent": "s_z1nvHyEppoI"
+      "parent": "s_TxCFOy819ag"
     },
     "s_tEQuFot8caw": {
       "origin": "routes/index.tsx",
@@ -120,11 +120,41 @@
       "captures": false,
       "parent": null
     },
+    "s_8gdLBszqbaM": {
+      "origin": "../node_modules/@builder.io/qwik-city/index.qwik.mjs",
+      "displayName": "Link_component",
+      "canonicalFilename": "s_8gdlbszqbam",
+      "hash": "8gdLBszqbaM",
+      "ctxKind": "function",
+      "ctxName": "component$",
+      "captures": false,
+      "parent": null
+    },
+    "s_AKetNByE5TM": {
+      "origin": "../node_modules/@builder.io/qwik-city/index.qwik.mjs",
+      "displayName": "RouterOutlet_component",
+      "canonicalFilename": "s_aketnbye5tm",
+      "hash": "AKetNByE5TM",
+      "ctxKind": "function",
+      "ctxName": "component$",
+      "captures": false,
+      "parent": null
+    },
     "s_LJXogu0s4bw": {
       "origin": "routes/layout.tsx",
       "displayName": "layout_component",
       "canonicalFilename": "s_ljxogu0s4bw",
       "hash": "LJXogu0s4bw",
+      "ctxKind": "function",
+      "ctxName": "component$",
+      "captures": false,
+      "parent": null
+    },
+    "s_TxCFOy819ag": {
+      "origin": "../node_modules/@builder.io/qwik-city/index.qwik.mjs",
+      "displayName": "QwikCityProvider_component",
+      "canonicalFilename": "s_txcfoy819ag",
+      "hash": "TxCFOy819ag",
       "ctxKind": "function",
       "ctxName": "component$",
       "captures": false,
@@ -140,6 +170,16 @@
       "captures": false,
       "parent": null
     },
+    "s_WmYC5H00wtI": {
+      "origin": "../node_modules/@builder.io/qwik-city/index.qwik.mjs",
+      "displayName": "QwikCityMockProvider_component",
+      "canonicalFilename": "s_wmyc5h00wti",
+      "hash": "WmYC5H00wtI",
+      "ctxKind": "function",
+      "ctxName": "component$",
+      "captures": false,
+      "parent": null
+    },
     "s_gSIRXOSvTtA": {
       "origin": "components/header/header.tsx",
       "displayName": "header_component",
@@ -150,41 +190,11 @@
       "captures": false,
       "parent": null
     },
-    "s_mYsiJcA4IBc": {
-      "origin": "../node_modules/@builder.io/qwik-city/index.qwik.mjs",
-      "displayName": "Link_component",
-      "canonicalFilename": "s_mysijca4ibc",
-      "hash": "mYsiJcA4IBc",
-      "ctxKind": "function",
-      "ctxName": "component$",
-      "captures": false,
-      "parent": null
-    },
-    "s_nd8yk3KO22c": {
-      "origin": "../node_modules/@builder.io/qwik-city/index.qwik.mjs",
-      "displayName": "RouterOutlet_component",
-      "canonicalFilename": "s_nd8yk3ko22c",
-      "hash": "nd8yk3KO22c",
-      "ctxKind": "function",
-      "ctxName": "component$",
-      "captures": false,
-      "parent": null
-    },
     "s_vsKr0ZqSHfU": {
       "origin": "components/router-head/router-head.tsx",
       "displayName": "RouterHead_component",
       "canonicalFilename": "s_vskr0zqshfu",
       "hash": "vsKr0ZqSHfU",
-      "ctxKind": "function",
-      "ctxName": "component$",
-      "captures": false,
-      "parent": null
-    },
-    "s_z1nvHyEppoI": {
-      "origin": "../node_modules/@builder.io/qwik-city/index.qwik.mjs",
-      "displayName": "QwikCity_component",
-      "canonicalFilename": "s_z1nvhyeppoi",
-      "hash": "z1nvHyEppoI",
       "ctxKind": "function",
       "ctxName": "component$",
       "captures": false,
@@ -232,41 +242,69 @@
     }
   },
   "mapping": {
-    "s_6Fd8AjL5Bco": "q-539a65f3.js",
-    "s_hA9UPaY8sNQ": "q-d8f32b4b.js",
-    "s_tY5igJzCM5Q": "q-539a65f3.js",
-    "s_udDrW7Y0ztw": "q-0faaee2d.js",
-    "s_skxgNVWVOT8": "q-d8f32b4b.js",
-    "s_asLbBTFH6kA": "q-539a65f3.js",
-    "s_g5vxWnYSDFs": "q-539a65f3.js",
-    "s_uVE5iM9H73c": "q-d8f32b4b.js",
-    "s_AaAlzKH0KlQ": "q-817d2bd3.js",
-    "s_tEQuFot8caw": "q-539a65f3.js",
-    "s_WjXpUuAf3ck": "q-539a65f3.js",
-    "s_0Ky05GxNoW8": "q-d3baad90.js",
-    "s_LJXogu0s4bw": "q-0d937211.js",
-    "s_WehTHV2Vp3k": "q-539a65f3.js",
-    "s_gSIRXOSvTtA": "q-8b6123d1.js",
-    "s_mYsiJcA4IBc": "q-d8f32b4b.js",
-    "s_nd8yk3KO22c": "q-e7bbedd2.js",
-    "s_vsKr0ZqSHfU": "q-124df4e4.js",
-    "s_z1nvHyEppoI": "q-817d2bd3.js",
-    "s_zr0sXMkduGs": "q-0faaee2d.js",
-    "s_08Vu5jppeJk": "q-539a65f3.js",
-    "s_6F5YqPRJUdg": "q-8b6123d1.js",
-    "s_YJ6mtqrUqEk": "q-0faaee2d.js"
+    "s_6Fd8AjL5Bco": "q-e17322c8.js",
+    "s_kzjavhDI3L0": "q-b52af63e.js",
+    "s_tY5igJzCM5Q": "q-e17322c8.js",
+    "s_udDrW7Y0ztw": "q-b56c29d2.js",
+    "s_yiXwCC0m3jY": "q-b52af63e.js",
+    "s_asLbBTFH6kA": "q-e17322c8.js",
+    "s_g5vxWnYSDFs": "q-e17322c8.js",
+    "s_EpaZ5qQ4Lg4": "q-b52af63e.js",
+    "s_2Eo7WCpaqI8": "q-fd2c8f41.js",
+    "s_tEQuFot8caw": "q-e17322c8.js",
+    "s_WjXpUuAf3ck": "q-e17322c8.js",
+    "s_0Ky05GxNoW8": "q-ef8f7a75.js",
+    "s_8gdLBszqbaM": "q-b52af63e.js",
+    "s_AKetNByE5TM": "q-0364479b.js",
+    "s_LJXogu0s4bw": "q-1d9b761b.js",
+    "s_TxCFOy819ag": "q-fd2c8f41.js",
+    "s_WehTHV2Vp3k": "q-e17322c8.js",
+    "s_WmYC5H00wtI": "q-8528b3de.js",
+    "s_gSIRXOSvTtA": "q-d7ae8157.js",
+    "s_vsKr0ZqSHfU": "q-cbfc9114.js",
+    "s_zr0sXMkduGs": "q-b56c29d2.js",
+    "s_08Vu5jppeJk": "q-e17322c8.js",
+    "s_6F5YqPRJUdg": "q-d7ae8157.js",
+    "s_YJ6mtqrUqEk": "q-b56c29d2.js"
   },
   "bundles": {
-    "q-0d937211.js": {
-      "size": 756,
+    "q-0364479b.js": {
+      "size": 269,
       "imports": [
-        "q-98fe2e84.js"
-      ],
-      "dynamicImports": [
-        "q-8b6123d1.js"
+        "q-74bbc837.js",
+        "q-ef8f7a75.js"
       ],
       "origins": [
-        "src/components/header/header.js",
+        "src/entry_RouterOutlet.js",
+        "src/s_aketnbye5tm.js"
+      ],
+      "symbols": [
+        "s_AKetNByE5TM"
+      ]
+    },
+    "q-1083ad4a.js": {
+      "size": 58,
+      "imports": [
+        "q-74bbc837.js"
+      ]
+    },
+    "q-1d4e3858.js": {
+      "size": 2536,
+      "origins": [
+        "node_modules/@builder.io/qwik-city/service-worker.mjs",
+        "src/routes/service-worker.ts"
+      ]
+    },
+    "q-1d9b761b.js": {
+      "size": 783,
+      "imports": [
+        "q-74bbc837.js"
+      ],
+      "dynamicImports": [
+        "q-d7ae8157.js"
+      ],
+      "origins": [
+        "src/components/header/header.tsx",
         "src/entry_layout.js",
         "src/s_ljxogu0s4bw.js"
       ],
@@ -274,12 +312,96 @@
         "s_LJXogu0s4bw"
       ]
     },
-    "q-0faaee2d.js": {
-      "size": 2456,
+    "q-225cb7a6.js": {
+      "size": 112,
       "imports": [
-        "q-539a65f3.js",
-        "q-7b1f4ace.js",
-        "q-98fe2e84.js"
+        "q-74bbc837.js"
+      ],
+      "dynamicImports": [
+        "q-1d4e3858.js"
+      ],
+      "origins": [
+        "@qwik-city-entries"
+      ]
+    },
+    "q-2e155def.js": {
+      "size": 185,
+      "imports": [
+        "q-74bbc837.js"
+      ],
+      "dynamicImports": [
+        "q-1d9b761b.js"
+      ],
+      "origins": [
+        "src/routes/layout.tsx"
+      ]
+    },
+    "q-74bbc837.js": {
+      "size": 42903,
+      "dynamicImports": [
+        "q-ef8f7a75.js"
+      ],
+      "origins": [
+        "\u0000vite/preload-helper",
+        "node_modules/@builder.io/qwik/core.min.mjs",
+        "src/global.css",
+        "src/root.tsx"
+      ]
+    },
+    "q-8528b3de.js": {
+      "size": 496,
+      "imports": [
+        "q-74bbc837.js",
+        "q-ef8f7a75.js"
+      ],
+      "origins": [
+        "src/entry_QwikCityMockProvider.js",
+        "src/s_wmyc5h00wti.js"
+      ],
+      "symbols": [
+        "s_WmYC5H00wtI"
+      ]
+    },
+    "q-9c6c30ad.js": {
+      "size": 507,
+      "imports": [
+        "q-74bbc837.js"
+      ],
+      "dynamicImports": [
+        "q-225cb7a6.js",
+        "q-2e155def.js",
+        "q-ef0f0fff.js"
+      ],
+      "origins": [
+        "@qwik-city-plan"
+      ]
+    },
+    "q-b52af63e.js": {
+      "size": 855,
+      "imports": [
+        "q-74bbc837.js",
+        "q-ef8f7a75.js"
+      ],
+      "origins": [
+        "src/entry_Link.js",
+        "src/s_8gdlbszqbam.js",
+        "src/s_epaz5qq4lg4.js",
+        "src/s_kzjavhdi3l0.js",
+        "src/s_yixwcc0m3jy.js"
+      ],
+      "symbols": [
+        "s_8gdLBszqbaM",
+        "s_EpaZ5qQ4Lg4",
+        "s_kzjavhDI3L0",
+        "s_yiXwCC0m3jY"
+      ]
+    },
+    "q-b56c29d2.js": {
+      "size": 2468,
+      "imports": [
+        "q-74bbc837.js",
+        "q-e17322c8.js",
+        "q-ef0f0fff.js"
       ],
       "origins": [
         "src/entry_concertInfo.js",
@@ -294,11 +416,11 @@
         "s_zr0sXMkduGs"
       ]
     },
-    "q-124df4e4.js": {
+    "q-cbfc9114.js": {
       "size": 628,
       "imports": [
-        "q-98fe2e84.js",
-        "q-d3baad90.js"
+        "q-74bbc837.js",
+        "q-ef8f7a75.js"
       ],
       "origins": [
         "src/entry_RouterHead.js",
@@ -308,21 +430,30 @@
         "s_vsKr0ZqSHfU"
       ]
     },
-    "q-143c7194.js": {
-      "size": 2180,
+    "q-d7ae8157.js": {
+      "size": 595,
+      "imports": [
+        "q-74bbc837.js"
+      ],
       "origins": [
-        "node_modules/@builder.io/qwik-city/service-worker.mjs",
-        "src/routes/service-worker.js"
+        "src/components/header/header.css?used&inline",
+        "src/entry_header.js",
+        "src/s_6f5yqprjudg.js",
+        "src/s_gsirxosvtta.js"
+      ],
+      "symbols": [
+        "s_6F5YqPRJUdg",
+        "s_gSIRXOSvTtA"
       ]
     },
-    "q-539a65f3.js": {
-      "size": 114557,
+    "q-e17322c8.js": {
+      "size": 114547,
       "imports": [
-        "q-7b1f4ace.js",
-        "q-98fe2e84.js"
+        "q-74bbc837.js",
+        "q-ef0f0fff.js"
       ],
       "dynamicImports": [
-        "q-0faaee2d.js"
+        "q-b56c29d2.js"
       ],
       "origins": [
         "\u0000/Users/alxndr/workspace/jrad-today/node_modules/papaparse/papaparse.min.js?commonjs-module",
@@ -332,7 +463,7 @@
         "src/data/recordings.csv?raw",
         "src/data/shows.csv?raw",
         "src/entry_routes.js",
-        "src/routes/concertInfo.js",
+        "src/routes/concertInfo.tsx",
         "src/routes/home.css?used&inline",
         "src/s_08vu5jppejk.js",
         "src/s_6fd8ajl5bco.js",
@@ -354,99 +485,34 @@
         "s_WjXpUuAf3ck"
       ]
     },
-    "q-7b1f4ace.js": {
-      "size": 1633,
+    "q-ef0f0fff.js": {
+      "size": 1868,
       "imports": [
-        "q-98fe2e84.js"
+        "q-74bbc837.js"
       ],
       "dynamicImports": [
-        "q-539a65f3.js"
+        "q-e17322c8.js"
       ],
       "origins": [
-        "src/routes/index.js"
+        "src/routes/index.tsx"
       ]
     },
-    "q-817d2bd3.js": {
-      "size": 1489,
+    "q-ef8f7a75.js": {
+      "size": 4459,
       "imports": [
-        "q-98fe2e84.js",
-        "q-d3baad90.js"
+        "q-74bbc837.js"
       ],
       "dynamicImports": [
-        "q-de2cfc36.js"
+        "q-0364479b.js",
+        "q-8528b3de.js",
+        "q-b52af63e.js",
+        "q-cbfc9114.js",
+        "q-fd2c8f41.js"
       ],
       "origins": [
-        "@builder.io/qwik/build",
-        "src/entry_QwikCity.js",
-        "src/s_aaalzkh0klq.js",
-        "src/s_z1nvhyeppoi.js"
-      ],
-      "symbols": [
-        "s_AaAlzKH0KlQ",
-        "s_z1nvHyEppoI"
-      ]
-    },
-    "q-8b6123d1.js": {
-      "size": 607,
-      "imports": [
-        "q-98fe2e84.js"
-      ],
-      "origins": [
-        "src/components/header/header.css?used&inline",
-        "src/entry_header.js",
-        "src/s_6f5yqprjudg.js",
-        "src/s_gsirxosvtta.js"
-      ],
-      "symbols": [
-        "s_6F5YqPRJUdg",
-        "s_gSIRXOSvTtA"
-      ]
-    },
-    "q-98fe2e84.js": {
-      "size": 40607,
-      "dynamicImports": [
-        "q-d3baad90.js"
-      ],
-      "origins": [
-        "\u0000vite/preload-helper",
-        "node_modules/@builder.io/qwik/core.min.mjs",
-        "src/global.css",
-        "src/root.js"
-      ]
-    },
-    "q-c6ab1cd5.js": {
-      "size": 158,
-      "imports": [
-        "q-98fe2e84.js"
-      ],
-      "dynamicImports": [
-        "q-0d937211.js"
-      ],
-      "origins": [
-        "src/routes/layout.js"
-      ]
-    },
-    "q-d31135d8.js": {
-      "size": 58,
-      "imports": [
-        "q-98fe2e84.js"
-      ]
-    },
-    "q-d3baad90.js": {
-      "size": 4426,
-      "imports": [
-        "q-98fe2e84.js"
-      ],
-      "dynamicImports": [
-        "q-124df4e4.js",
-        "q-817d2bd3.js",
-        "q-d8f32b4b.js",
-        "q-de2cfc36.js",
-        "q-e7bbedd2.js"
-      ],
-      "origins": [
+        "@qwik-city-sw-register",
         "node_modules/@builder.io/qwik-city/index.qwik.mjs",
-        "src/components/router-head/router-head.js",
+        "src/components/router-head/router-head.tsx",
         "src/entry_root.js",
         "src/s_0ky05gxnow8.js"
       ],
@@ -454,74 +520,34 @@
         "s_0Ky05GxNoW8"
       ]
     },
-    "q-d8f32b4b.js": {
-      "size": 886,
+    "q-fd2c8f41.js": {
+      "size": 1551,
       "imports": [
-        "q-98fe2e84.js",
-        "q-d3baad90.js"
-      ],
-      "origins": [
-        "src/entry_Link.js",
-        "src/s_ha9upay8snq.js",
-        "src/s_mysijca4ibc.js",
-        "src/s_skxgnvwvot8.js",
-        "src/s_uve5im9h73c.js"
-      ],
-      "symbols": [
-        "s_hA9UPaY8sNQ",
-        "s_mYsiJcA4IBc",
-        "s_skxgNVWVOT8",
-        "s_uVE5iM9H73c"
-      ]
-    },
-    "q-db37adff.js": {
-      "size": 128,
-      "imports": [
-        "q-98fe2e84.js"
+        "q-74bbc837.js",
+        "q-ef8f7a75.js"
       ],
       "dynamicImports": [
-        "q-143c7194.js"
+        "q-9c6c30ad.js"
       ],
       "origins": [
-        "@qwik-city-entries"
-      ]
-    },
-    "q-de2cfc36.js": {
-      "size": 346,
-      "imports": [
-        "q-98fe2e84.js"
-      ],
-      "dynamicImports": [
-        "q-7b1f4ace.js",
-        "q-c6ab1cd5.js",
-        "q-db37adff.js"
-      ],
-      "origins": [
-        "@qwik-city-plan"
-      ]
-    },
-    "q-e7bbedd2.js": {
-      "size": 269,
-      "imports": [
-        "q-98fe2e84.js",
-        "q-d3baad90.js"
-      ],
-      "origins": [
-        "src/entry_RouterOutlet.js",
-        "src/s_nd8yk3ko22c.js"
+        "@builder.io/qwik/build",
+        "src/entry_QwikCityProvider.js",
+        "src/s_2eo7wcpaqi8.js",
+        "src/s_txcfoy819ag.js"
       ],
       "symbols": [
-        "s_nd8yk3KO22c"
+        "s_2Eo7WCpaqI8",
+        "s_TxCFOy819ag"
       ]
     }
   },
   "injections": [
     {
-      "tag": "link",
+      "tag": "style",
       "location": "head",
       "attributes": {
-        "rel": "stylesheet",
-        "href": "/build/q-e9e10aaf.css"
+        "data-src": "/build/q-b9d806e1.css",
+        "dangerouslySetInnerHTML": "body{background-color:#eee;font-family:Helvetica,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,sans-serif;padding:10px 10px 40px}main{margin:0 auto;background-color:#fff;border-radius:5px;overflow:hidden;box-shadow:0 2px 4px 1px #000b}h1{margin:0 0 1em}h2{margin:0 0 .2em}section{padding:20px}hr{margin:1.5em;width:50%}p{width:100%;text-align:center}a:hover{text-decoration:none}footer{padding:15px;text-align:center;font-size:.7em}footer ul{margin:0;padding:0;list-style:none;display:flex;flex-direction:row;flex-wrap:wrap;justify-content:center}footer li:after{content:\"\\2022\"}footer li:last-child:after{content:none}footer li>a{padding:.5em;text-decoration:none}a.icon{background:0/contain no-repeat}a.icon.github{background-image:url(https://i.imgur.com/8Sp9Ndd.png);padding-left:2.3em}\n"
       }
     }
   ],
@@ -535,7 +561,7 @@
     }
   },
   "platform": {
-    "qwik": "0.11.0",
+    "qwik": "0.13.3",
     "vite": "",
     "rollup": "2.78.1",
     "env": "node",
