--- a/q-manifest.json
+++ b/q-manifest.json
@@ -239,83 +239,57 @@
       "ctxName": "useStylesScoped$",
       "captures": false,
       "parent": "s_zr0sXMkduGs"
+    },
+    "s_u0YVoxt2aTY": {
+      "origin": "../node_modules/@builder.io/qwik-city/index.qwik.mjs",
+      "displayName": "Link_component_useOnDocument",
+      "canonicalFilename": "s_u0yvoxt2aty",
+      "hash": "u0YVoxt2aTY",
+      "ctxKind": "function",
+      "ctxName": "useOnDocument",
+      "captures": false,
+      "parent": "s_8gdLBszqbaM"
     }
   },
   "mapping": {
-    "s_6Fd8AjL5Bco": "q-97adb635.js",
-    "s_kzjavhDI3L0": "q-acb67fec.js",
-    "s_tY5igJzCM5Q": "q-97adb635.js",
-    "s_udDrW7Y0ztw": "q-54a78c9d.js",
-    "s_yiXwCC0m3jY": "q-acb67fec.js",
-    "s_asLbBTFH6kA": "q-97adb635.js",
-    "s_g5vxWnYSDFs": "q-97adb635.js",
-    "s_EpaZ5qQ4Lg4": "q-acb67fec.js",
-    "s_2Eo7WCpaqI8": "q-d5166021.js",
-    "s_tEQuFot8caw": "q-97adb635.js",
-    "s_WjXpUuAf3ck": "q-97adb635.js",
-    "s_0Ky05GxNoW8": "q-511bac1e.js",
-    "s_8gdLBszqbaM": "q-acb67fec.js",
-    "s_AKetNByE5TM": "q-cf4a9da2.js",
-    "s_LJXogu0s4bw": "q-ed061eef.js",
-    "s_TxCFOy819ag": "q-d5166021.js",
-    "s_WehTHV2Vp3k": "q-97adb635.js",
-    "s_WmYC5H00wtI": "q-474e84d5.js",
-    "s_gSIRXOSvTtA": "q-06ae336a.js",
-    "s_vsKr0ZqSHfU": "q-70ebcced.js",
-    "s_zr0sXMkduGs": "q-54a78c9d.js",
-    "s_08Vu5jppeJk": "q-97adb635.js",
-    "s_6F5YqPRJUdg": "q-06ae336a.js",
-    "s_YJ6mtqrUqEk": "q-54a78c9d.js"
+    "s_6Fd8AjL5Bco": "q-4a6b334c.js",
+    "s_kzjavhDI3L0": "q-59bc57ad.js",
+    "s_tY5igJzCM5Q": "q-4a6b334c.js",
+    "s_udDrW7Y0ztw": "q-be8186c6.js",
+    "s_yiXwCC0m3jY": "q-59bc57ad.js",
+    "s_asLbBTFH6kA": "q-4a6b334c.js",
+    "s_g5vxWnYSDFs": "q-4a6b334c.js",
+    "s_EpaZ5qQ4Lg4": "q-59bc57ad.js",
+    "s_2Eo7WCpaqI8": "q-530f4c64.js",
+    "s_tEQuFot8caw": "q-4a6b334c.js",
+    "s_WjXpUuAf3ck": "q-4a6b334c.js",
+    "s_0Ky05GxNoW8": "q-0638b307.js",
+    "s_8gdLBszqbaM": "q-59bc57ad.js",
+    "s_AKetNByE5TM": "q-3cb4423a.js",
+    "s_LJXogu0s4bw": "q-c76e0196.js",
+    "s_TxCFOy819ag": "q-530f4c64.js",
+    "s_WehTHV2Vp3k": "q-4a6b334c.js",
+    "s_WmYC5H00wtI": "q-5154451c.js",
+    "s_gSIRXOSvTtA": "q-8dee87fb.js",
+    "s_vsKr0ZqSHfU": "q-6afe7fa5.js",
+    "s_zr0sXMkduGs": "q-be8186c6.js",
+    "s_08Vu5jppeJk": "q-4a6b334c.js",
+    "s_6F5YqPRJUdg": "q-8dee87fb.js",
+    "s_YJ6mtqrUqEk": "q-be8186c6.js",
+    "s_u0YVoxt2aTY": "q-59bc57ad.js"
   },
   "bundles": {
-    "q-06ae336a.js": {
-      "size": 595,
+    "q-0638b307.js": {
+      "size": 4561,
       "imports": [
-        "q-5a552d61.js"
-      ],
-      "origins": [
-        "src/components/header/header.css?used&inline",
-        "src/entry_header.js",
-        "src/s_6f5yqprjudg.js",
-        "src/s_gsirxosvtta.js"
-      ],
-      "symbols": [
-        "s_6F5YqPRJUdg",
-        "s_gSIRXOSvTtA"
-      ]
-    },
-    "q-1d4e3858.js": {
-      "size": 2536,
-      "origins": [
-        "node_modules/@builder.io/qwik-city/service-worker.mjs",
-        "src/routes/service-worker.ts"
-      ]
-    },
-    "q-474e84d5.js": {
-      "size": 496,
-      "imports": [
-        "q-511bac1e.js",
-        "q-5a552d61.js"
-      ],
-      "origins": [
-        "src/entry_QwikCityMockProvider.js",
-        "src/s_wmyc5h00wti.js"
-      ],
-      "symbols": [
-        "s_WmYC5H00wtI"
-      ]
-    },
-    "q-511bac1e.js": {
-      "size": 4459,
-      "imports": [
-        "q-5a552d61.js"
+        "q-9f798d71.js"
       ],
       "dynamicImports": [
-        "q-474e84d5.js",
-        "q-70ebcced.js",
-        "q-acb67fec.js",
-        "q-cf4a9da2.js",
-        "q-d5166021.js"
+        "q-3cb4423a.js",
+        "q-5154451c.js",
+        "q-530f4c64.js",
+        "q-59bc57ad.js",
+        "q-6afe7fa5.js"
       ],
       "origins": [
         "@qwik-city-sw-register",
@@ -328,80 +302,47 @@
         "s_0Ky05GxNoW8"
       ]
     },
-    "q-54a78c9d.js": {
-      "size": 2468,
+    "q-1d4e3858.js": {
+      "size": 2536,
+      "origins": [
+        "node_modules/@builder.io/qwik-city/service-worker.mjs",
+        "src/routes/service-worker.ts"
+      ]
+    },
+    "q-3cb4423a.js": {
+      "size": 269,
       "imports": [
-        "q-5a552d61.js",
-        "q-97adb635.js",
-        "q-e41aa538.js"
+        "q-0638b307.js",
+        "q-9f798d71.js"
       ],
       "origins": [
-        "src/entry_concertInfo.js",
-        "src/routes/concertInfo.css?used&inline",
-        "src/s_uddrw7y0ztw.js",
-        "src/s_yj6mtqruqek.js",
-        "src/s_zr0sxmkdugs.js"
+        "src/entry_RouterOutlet.js",
+        "src/s_aketnbye5tm.js"
       ],
       "symbols": [
-        "s_udDrW7Y0ztw",
-        "s_YJ6mtqrUqEk",
-        "s_zr0sXMkduGs"
+        "s_AKetNByE5TM"
       ]
     },
-    "q-5a552d61.js": {
-      "size": 42961,
-      "dynamicImports": [
-        "q-511bac1e.js"
-      ],
-      "origins": [
-        "\u0000vite/preload-helper",
-        "node_modules/@builder.io/qwik/core.min.mjs",
-        "src/global.css",
-        "src/root.tsx"
-      ]
-    },
-    "q-70ebcced.js": {
-      "size": 628,
+    "q-43e08c52.js": {
+      "size": 185,
       "imports": [
-        "q-511bac1e.js",
-        "q-5a552d61.js"
-      ],
-      "origins": [
-        "src/entry_RouterHead.js",
-        "src/s_vskr0zqshfu.js"
-      ],
-      "symbols": [
-        "s_vsKr0ZqSHfU"
-      ]
-    },
-    "q-7e54835a.js": {
-      "size": 58,
-      "imports": [
-        "q-5a552d61.js"
-      ]
-    },
-    "q-8c78315a.js": {
-      "size": 507,
-      "imports": [
-        "q-5a552d61.js"
+        "q-9f798d71.js"
       ],
       "dynamicImports": [
-        "q-c2eae11b.js",
-        "q-e41aa538.js",
-        "q-ea0b7b35.js"
+        "q-c76e0196.js"
       ],
       "origins": [
-        "@qwik-city-plan"
+        "src/routes/layout.tsx"
       ]
     },
-    "q-97adb635.js": {
-      "size": 114547,
+    "q-4a6b334c.js": {
+      "size": 115240,
       "imports": [
-        "q-5a552d61.js",
-        "q-e41aa538.js"
+        "q-9f798d71.js",
+        "q-dad816a1.js"
       ],
       "dynamicImports": [
-        "q-54a78c9d.js"
+        "q-be8186c6.js"
       ],
       "origins": [
         "\u0000/Users/alxndr/workspace/jrad-today/node_modules/papaparse/papaparse.min.js?commonjs-module",
@@ -433,60 +374,28 @@
         "s_WjXpUuAf3ck"
       ]
     },
-    "q-acb67fec.js": {
-      "size": 855,
+    "q-5154451c.js": {
+      "size": 491,
       "imports": [
-        "q-511bac1e.js",
-        "q-5a552d61.js"
+        "q-0638b307.js",
+        "q-9f798d71.js"
       ],
       "origins": [
-        "src/entry_Link.js",
-        "src/s_8gdlbszqbam.js",
-        "src/s_epaz5qq4lg4.js",
-        "src/s_kzjavhdi3l0.js",
-        "src/s_yixwcc0m3jy.js"
+        "src/entry_QwikCityMockProvider.js",
+        "src/s_wmyc5h00wti.js"
       ],
       "symbols": [
-        "s_8gdLBszqbaM",
-        "s_EpaZ5qQ4Lg4",
-        "s_kzjavhDI3L0",
-        "s_yiXwCC0m3jY"
+        "s_WmYC5H00wtI"
       ]
     },
-    "q-c2eae11b.js": {
-      "size": 112,
+    "q-530f4c64.js": {
+      "size": 1546,
       "imports": [
-        "q-5a552d61.js"
+        "q-0638b307.js",
+        "q-9f798d71.js"
       ],
       "dynamicImports": [
-        "q-1d4e3858.js"
-      ],
-      "origins": [
-        "@qwik-city-entries"
-      ]
-    },
-    "q-cf4a9da2.js": {
-      "size": 269,
-      "imports": [
-        "q-511bac1e.js",
-        "q-5a552d61.js"
-      ],
-      "origins": [
-        "src/entry_RouterOutlet.js",
-        "src/s_aketnbye5tm.js"
-      ],
-      "symbols": [
-        "s_AKetNByE5TM"
-      ]
-    },
-    "q-d5166021.js": {
-      "size": 1551,
-      "imports": [
-        "q-511bac1e.js",
-        "q-5a552d61.js"
-      ],
-      "dynamicImports": [
-        "q-8c78315a.js"
+        "q-542989eb.js"
       ],
       "origins": [
         "@builder.io/qwik/build",
@@ -499,37 +408,129 @@
         "s_TxCFOy819ag"
       ]
     },
-    "q-e41aa538.js": {
-      "size": 1868,
+    "q-542989eb.js": {
+      "size": 507,
       "imports": [
-        "q-5a552d61.js"
+        "q-9f798d71.js"
       ],
       "dynamicImports": [
-        "q-97adb635.js"
+        "q-43e08c52.js",
+        "q-7a212f57.js",
+        "q-dad816a1.js"
       ],
       "origins": [
-        "src/routes/index.tsx"
+        "@qwik-city-plan"
       ]
     },
-    "q-ea0b7b35.js": {
-      "size": 185,
+    "q-59bc57ad.js": {
+      "size": 1114,
       "imports": [
-        "q-5a552d61.js"
-      ],
-      "dynamicImports": [
-        "q-ed061eef.js"
+        "q-0638b307.js",
+        "q-9f798d71.js"
       ],
       "origins": [
-        "src/routes/layout.tsx"
+        "src/entry_Link.js",
+        "src/s_8gdlbszqbam.js",
+        "src/s_epaz5qq4lg4.js",
+        "src/s_kzjavhdi3l0.js",
+        "src/s_u0yvoxt2aty.js",
+        "src/s_yixwcc0m3jy.js"
+      ],
+      "symbols": [
+        "s_8gdLBszqbaM",
+        "s_EpaZ5qQ4Lg4",
+        "s_kzjavhDI3L0",
+        "s_u0YVoxt2aTY",
+        "s_yiXwCC0m3jY"
       ]
     },
-    "q-ed061eef.js": {
-      "size": 783,
+    "q-6afe7fa5.js": {
+      "size": 628,
       "imports": [
-        "q-5a552d61.js"
+        "q-0638b307.js",
+        "q-9f798d71.js"
+      ],
+      "origins": [
+        "src/entry_RouterHead.js",
+        "src/s_vskr0zqshfu.js"
+      ],
+      "symbols": [
+        "s_vsKr0ZqSHfU"
+      ]
+    },
+    "q-7a212f57.js": {
+      "size": 112,
+      "imports": [
+        "q-9f798d71.js"
       ],
       "dynamicImports": [
-        "q-06ae336a.js"
+        "q-1d4e3858.js"
+      ],
+      "origins": [
+        "@qwik-city-entries"
+      ]
+    },
+    "q-8dee87fb.js": {
+      "size": 595,
+      "imports": [
+        "q-9f798d71.js"
+      ],
+      "origins": [
+        "src/components/header/header.css?used&inline",
+        "src/entry_header.js",
+        "src/s_6f5yqprjudg.js",
+        "src/s_gsirxosvtta.js"
+      ],
+      "symbols": [
+        "s_6F5YqPRJUdg",
+        "s_gSIRXOSvTtA"
+      ]
+    },
+    "q-9f798d71.js": {
+      "size": 43008,
+      "dynamicImports": [
+        "q-0638b307.js"
+      ],
+      "origins": [
+        "\u0000vite/preload-helper",
+        "node_modules/@builder.io/qwik/core.min.mjs",
+        "src/global.css",
+        "src/root.tsx"
+      ]
+    },
+    "q-be8186c6.js": {
+      "size": 2468,
+      "imports": [
+        "q-4a6b334c.js",
+        "q-9f798d71.js",
+        "q-dad816a1.js"
+      ],
+      "origins": [
+        "src/entry_concertInfo.js",
+        "src/routes/concertInfo.css?used&inline",
+        "src/s_uddrw7y0ztw.js",
+        "src/s_yj6mtqruqek.js",
+        "src/s_zr0sxmkdugs.js"
+      ],
+      "symbols": [
+        "s_udDrW7Y0ztw",
+        "s_YJ6mtqrUqEk",
+        "s_zr0sXMkduGs"
+      ]
+    },
+    "q-c5310550.js": {
+      "size": 58,
+      "imports": [
+        "q-9f798d71.js"
+      ]
+    },
+    "q-c76e0196.js": {
+      "size": 891,
+      "imports": [
+        "q-9f798d71.js"
+      ],
+      "dynamicImports": [
+        "q-8dee87fb.js"
       ],
       "origins": [
         "src/components/header/header.tsx",
@@ -538,6 +539,18 @@
       ],
       "symbols": [
         "s_LJXogu0s4bw"
+      ]
+    },
+    "q-dad816a1.js": {
+      "size": 1867,
+      "imports": [
+        "q-9f798d71.js"
+      ],
+      "dynamicImports": [
+        "q-4a6b334c.js"
+      ],
+      "origins": [
+        "src/routes/index.tsx"
       ]
     }
   },
@@ -561,7 +574,7 @@
     }
   },
   "platform": {
-    "qwik": "0.14.0",
+    "qwik": "0.14.1",
     "vite": "",
     "rollup": "2.78.1",
     "env": "node",
